# ESCUDO-DIGITAL-IA

./: .gitignore  README.md
escudo-digital-ia/: .env.example  .gitignore  SPEC.md  ai_service.py  aprender.py  evaluator.py  interface.py  main.py  privacy.py  prompts.py  pyproject.toml  requirements.txt  safety.py  storage.py  validator.py  vision_service.py  web.py
escudo-digital-ia/.git.backup/: index
escudo-digital-ia/data/: casos_teste.json  consumo.json  exercicios_aprender.json  resultados_prompt_v1.json  resultados_prompt_v2.json
escudo-digital-ia/docs/: ARQUITETURA.md  RELATORIO_DIA_1.md  RELATORIO_DIA_2.md  RELATORIO_DIA_3.md  RELATORIO_DIA_4.md  RELATORIO_FINAL.md
escudo-digital-ia/static/: style.css
escudo-digital-ia/templates/: aprender.html  index.html  resultado.html
escudo-digital-ia/tests/: test_ai_service.py  test_aprender.py  test_evaluator.py  test_interface.py  test_main.py  test_privacy.py  test_prompts.py  test_safety.py  test_storage.py  test_validator.py  test_vision_service.py  test_web.py
