[tool.poetry]
name = "escudo-digital-ia"
version = "0.1.0"
description = "Assistente educativo para ajudar a reconhecer possiveis golpes digitais."
authors = ["Enrico Fontoura"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
openai = "2.45.0"
python-dotenv = "1.2.1"
httpx = "^0.28.1"
fastapi = "^0.139.1"
uvicorn = "^0.51.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.32"
streamlit = "^1.59.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
